[package]
name = "smartrelease"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.3", features = ["rustls"] }
dotenv = "0.15"
env_logger = "0.10"
lazy_static = "1.4"
log = "0.4"
regex = "1.9"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
